--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,16 @@
 {
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules", "dist", "testing"],
   "compilerOptions": {
-    /* Language and Environment */
-    "target": "ESNext",
-
-    /* Modules */
-    "module": "ESNext",
-    "rootDir": "./src",
-    "moduleResolution": "node",
-
-    /* Emit */
-    "outDir": "./dist",
-
-    /* Interop Constraints */
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-
-    /* Type Checking */
+    "target": "es6",
+    "module": "commonjs",
+    "outDir": "dist",
     "strict": true,
-    "skipLibCheck": true
+    "sourceMap": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "typeRoots": ["./node_modules/@types", "types"]
   }
 }
